Fixed page title spacing and added reporter preview

--- a/themes/kent-news/css/all.css
+++ b/themes/kent-news/css/all.css
@@ -670,7 +670,7 @@ z-index: 10;}
         margin-top: 45px;
 }
 .news-block h1 span{color:#a4cf62;}
-.heading-box h1{padding:31px 0 0;}
+.heading-box h1{padding: 6px 0 0;}
 .news-box{
 	padding:4px 0 0;
 	font-size:11px;
